# boffin

./: .dockerignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  boffin.code-workspace  docker-compose.yaml  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/boffin/: main.py
backend/boffin/common/: db.py  errors.py  graphql.py  types.py
backend/boffin/student/: graphql.py  services.py
backend/migrations/: script.py.mako
backend/migrations/versions/: 20240630_1547-e6dd2383f058_add_student_table.py
boffin/: config.py  main.py
boffin/common/: base62.py  db.py  errors.py  models.py  rest.py
boffin/status/: rest.py
boffin/student/: __init__.py  graphql.py  model.py  rest.py  service.py  services.py  types.py
common/: models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
migrations/: env.py
migrations/versions/: 20240630_1547-e6dd2383f058_add_student_table.py
